# rag-impl-linkedin

./: .gitignore  README.md  main.py  pyproject.toml
walkthrough/: 1_project-setup.md  4_embedding.md  5_search-index.md  6_data-ingestion.md  document-loading  document-splitting
